@@ -557,9 +557,9 @@ export(getMlrOptions)
 export(getNestedTuneResultsOptPathDf)
 export(getNestedTuneResultsX)
 export(getParamSet)
+export(getPredictionProbabilities)
 export(getPredictionResponse)
 export(getPredictionTruth)
-export(getProbabilities)
 export(getRRPredictions)
 export(getStackedBaseLearnerPredictions)
 export(getTaskCosts)
