@@ -20,7 +20,7 @@
 #' @param predict.type [\code{character(1)}]\cr
 #'   Sets the type of the final prediction for \code{method = 'average'}.
 #'   For other methods, the predict type should be set within \code{super.learner}.
-#'   If the type of the base learner prediction, which is set up within \code{base.learners}), is
+#'   If the type of the base learner prediction, which is set up within \code{base.learners}, is
 #'   \describe{
 #'    \item{\code{"prob"}}{then \code{predict.type = 'prob'} will use the average of all
 #'    bease learner predictions and \code{predict.type = 'response'} will use
@@ -226,7 +226,7 @@ predictLearner.StackedLearner = function(.learner, .model, .newdata, ...) {
 
     pred = predict(sm, newdata = predData)
     if (sm.pt == "prob") {
-      return(as.matrix(getProbabilities(pred, cl = .model$task.desc$class.levels)))
+      return(as.matrix(getPredictionProbabilities(pred, cl = .model$task.desc$class.levels)))
     } else {
       return(pred$data$response)
     }
@@ -363,7 +363,7 @@ getResponse = function(pred, full.matrix = TRUE) {
       return(predReturn)
     } else {
       # return only vector of probabilities for binary classification
-      return(getProbabilities(pred))
+      return(getPredictionProbabilities(pred))
     }
   } else {
     # if regression task
