@@ -2,7 +2,7 @@
 
 # calcAUCCScores = function(pred, measure, cl) {
   # cls = pred$task.desc$class.levels
-  # p = getProbabilities(pred, classes = cls)
+  # p = getPredictionProbabilities(pred, classes = cls)
   # maxs = apply(p, 1L, max)
   # o = order(maxs)
 
