@@ -56,9 +56,9 @@ Other generate_plot_data: \code{\link{generateFilterValuesData}};
   \code{\link{getFilterValues}}
 
 Other predict: \code{\link{asROCRPrediction}};
+  \code{\link{getPredictionProbabilities}};
   \code{\link{getPredictionResponse}},
   \code{\link{getPredictionTruth}};
-  \code{\link{getProbabilities}};
   \code{\link{plotROCRCurvesGGVIS}};
   \code{\link{plotROCRCurves}};
   \code{\link{plotViperCharts}};
