@@ -1,10 +1,10 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/Prediction_operators.R
-\name{getProbabilities}
-\alias{getProbabilities}
+\name{getPredictionProbabilities}
+\alias{getPredictionProbabilities}
 \title{Get probabilities for some classes.}
 \usage{
-getProbabilities(pred, cl)
+getPredictionProbabilities(pred, cl)
 }
 \arguments{
 \item{pred}{[\code{\link{Prediction}}]\cr
@@ -29,10 +29,10 @@ mod = train(lrn, task)
 pred = predict(mod, newdata = iris)
 
 # Get probabilities for all classes
-head(getProbabilities(pred))
+head(getPredictionProbabilities(pred))
 
 # Get probabilities for a subset of classes
-head(getProbabilities(pred, c("setosa", "virginica")))
+head(getPredictionProbabilities(pred, c("setosa", "virginica")))
 }
 \seealso{
 Other predict: \code{\link{asROCRPrediction}};
