@@ -60,9 +60,9 @@ ECML PKDD 2013, pp. 650-653, LNCS 8190, Springer, 2013.
 \seealso{
 Other predict: \code{\link{asROCRPrediction}};
   \code{\link{generateROCRCurvesData}};
+  \code{\link{getPredictionProbabilities}};
   \code{\link{getPredictionResponse}},
   \code{\link{getPredictionTruth}};
-  \code{\link{getProbabilities}};
   \code{\link{plotROCRCurvesGGVIS}};
   \code{\link{plotROCRCurves}};
   \code{\link{predict.WrappedModel}};
