@@ -97,7 +97,7 @@ testProb = function(t.name, df, target, train.inds, old.probs, parset = list()) 
     else
       old.probs = as.matrix(old.probs)
 
-    p = getProbabilities(cp)
+    p = getPredictionProbabilities(cp)
     if (is.data.frame(p))
       p = as.matrix(p)
     # we change names a bit so dont check them
